# parsing_of_vacancies

./: .gitignore  README.md
parsing_of_vacancies/: README.md  pyproject.toml
parsing_of_vacancies/parsing_of_vacancies/: headhunter.py  job_api.py  json_saver.py  main.py  saver.py  superjob.py  utils.py  vacancy.py
