[tool.poetry]
name = "parsing-of-vacancies"
version = "0.1.0"
description = ""
authors = ["Dzerbun Igor <dzerbuni@mail.ru>"]
readme = "README.md"
packages = [{include = "parsing_of_vacancies"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
